@@ -946,3 +946,14 @@ History:
     - Section for removing HTML tags was reworked
   - Added blacklist to host_net_info() so that interfaces with -S net can
     be blacklisted.
+
+- 11 Mar 2014 M.Fuerstenau version 0.9.12
+  - Changed sleep() to usleep() and using now microseconds instead of seconds
+  - So before accessing the session file (and lock file) we now have a random sleep
+    up to 1500 milliseconds (default - see $ms_ts). This is to avoid a concurrent access
+    in case of a monitor restart or a "Schedule a check of all services on this host"
+    but takes much less time while having much more alternatives.
+  - In case of a locked session file the wait loop is not fix to a random period up to
+    5 sec. any more. Instead of this it uses also $ms_ts which means a max of 1.5 secs.
+    instead of 5.
+
